--- a/tentacular/package.json
+++ b/tentacular/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/http": "^0.5.1",
     "@nuxtjs/axios": "^5.3.6",
+    "http-proxy": "^1.18.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
